--- a/unity-renderer/Assets/Scripts/MainScripts/DCL/WorldRuntime/KernelCommunication/NativeBridgeCommunication/NativeBridgeCommunication.asmdef
+++ b/unity-renderer/Assets/Scripts/MainScripts/DCL/WorldRuntime/KernelCommunication/NativeBridgeCommunication/NativeBridgeCommunication.asmdef
@@ -6,7 +6,8 @@
         "GUID:a881b57670b1d2747a6d7f9e32b63230",
         "GUID:132013f160565434195ba5960832b346",
         "GUID:8c63f342fdbca7e1fbf6a616655e1c54",
-        "GUID:a166f06298ffb5fdaaf744ff18e2a5b8"
+        "GUID:a166f06298ffb5fdaaf744ff18e2a5b8",
+        "GUID:b46779583a009f04ba9f5f31d0e7e6ac"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
