--- a/unity-renderer/Assets/Scripts/MainScripts/DCL/WorldRuntime/KernelCommunication/WebSocketCommunication/WebSocketCommunication.asmdef
+++ b/unity-renderer/Assets/Scripts/MainScripts/DCL/WorldRuntime/KernelCommunication/WebSocketCommunication/WebSocketCommunication.asmdef
@@ -14,7 +14,8 @@
         "GUID:1e6b57fe78f7b724e9567f29f6a40c2c",
         "GUID:4163e04c81a259a4dad91db7352f2672",
         "GUID:1cd9f56ea305aae458297148eecef98c",
-        "GUID:168278a8a3b14a3ba0f7ee157fd1780b"
+        "GUID:168278a8a3b14a3ba0f7ee157fd1780b",
+        "GUID:b46779583a009f04ba9f5f31d0e7e6ac"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
