refactor: sdk6 components are serialized by protocol-buffer instead of json-strings

--- a/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/Materials/DCL.Components.Materials.asmdef
+++ b/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/Materials/DCL.Components.Materials.asmdef
@@ -13,7 +13,8 @@
     "GUID:08b2edf8f14cdd3408988fd7746b749c",
     "GUID:f62ee1cb37ad7324797360ac42f7a4d9",
     "GUID:28f74c468a54948bfa9f625c5d428f56",
-    "GUID:0b3e983b6c2fed54ebecf9d146c251ba"
+    "GUID:0b3e983b6c2fed54ebecf9d146c251ba",
+        "GUID:3c7b57a14671040bd8c549056adc04f5"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
