--- a/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/SmartItem/DCL.Components.Builder.asmdef
+++ b/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/SmartItem/DCL.Components.Builder.asmdef
@@ -9,7 +9,8 @@
     "GUID:b1087c5731ff68448a0a9c625bb7e52d",
     "GUID:28f74c468a54948bfa9f625c5d428f56",
     "GUID:1e6b57fe78f7b724e9567f29f6a40c2c",
-    "GUID:0b3e983b6c2fed54ebecf9d146c251ba"
+    "GUID:0b3e983b6c2fed54ebecf9d146c251ba",
+    "GUID:3c7b57a14671040bd8c549056adc04f5"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
