--- a/unity-renderer/Assets/DCLPlugins/UUIDEventComponentsPlugin/UUIDComponent/DCL.Components.Events.asmdef
+++ b/unity-renderer/Assets/DCLPlugins/UUIDEventComponentsPlugin/UUIDComponent/DCL.Components.Events.asmdef
@@ -30,7 +30,8 @@
         "GUID:3550e00a66204b87b236e867daa5afa8",
         "GUID:2995626b54c60644988f134a69a77450",
         "GUID:858f845923fcab3448cf8b66614b41a1",
-        "GUID:bb3eef89092f71f44aa2449a9cf7879c"
+        "GUID:bb3eef89092f71f44aa2449a9cf7879c",
+        "GUID:3c7b57a14671040bd8c549056adc04f5"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
