--- a/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/Avatar/AvatarShape.asmdef
+++ b/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/Avatar/AvatarShape.asmdef
@@ -76,7 +76,8 @@
         "GUID:ce5ce184029b7f34c9188d4ae2aeb3d7",
         "GUID:5289a39f46259954ca74010d7c9ded16",
         "GUID:3550e00a66204b87b236e867daa5afa8",
-        "GUID:6c1761dc8f737004198eb333521bd665"
+        "GUID:6c1761dc8f737004198eb333521bd665",
+        "GUID:3c7b57a14671040bd8c549056adc04f5"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
