--- a/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/BaseModel/BaseModel.asmdef
+++ b/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/BaseModel/BaseModel.asmdef
@@ -1,6 +1,9 @@
 {
     "name": "BaseModel",
-    "references": [],
+    "rootNamespace": "",
+    "references": [
+        "GUID:3c7b57a14671040bd8c549056adc04f5"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
