--- a/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/TextShape/DCL.Components.TextShape.asmdef
+++ b/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/TextShape/DCL.Components.TextShape.asmdef
@@ -14,7 +14,8 @@
         "GUID:1dd0780aa6be12b428c8005d0bee46b8",
         "GUID:fbcc413e192ef9048811d47ab0aca0c0",
         "GUID:9857fe4bae4e30441bc3a577c5de790a",
-        "GUID:3b80b0b562b1cbc489513f09fc1b8f69"
+        "GUID:3b80b0b562b1cbc489513f09fc1b8f69",
+        "GUID:3c7b57a14671040bd8c549056adc04f5"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
