--- a/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/UI/DCL.Components.UI.asmdef
+++ b/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/UI/DCL.Components.UI.asmdef
@@ -22,7 +22,8 @@
         "GUID:fbcc413e192ef9048811d47ab0aca0c0",
         "GUID:9857fe4bae4e30441bc3a577c5de790a",
         "GUID:3b80b0b562b1cbc489513f09fc1b8f69",
-        "GUID:0b167d3fa6c88454ea3eb69cbabe4eb7"
+        "GUID:0b167d3fa6c88454ea3eb69cbabe4eb7",
+        "GUID:3c7b57a14671040bd8c549056adc04f5"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
