--- a/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/Video/DCL.Components.Video.asmdef
+++ b/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/Video/DCL.Components.Video.asmdef
@@ -17,7 +17,8 @@
     "GUID:1e6b57fe78f7b724e9567f29f6a40c2c",
     "GUID:4973650d2444c4561a15d50f24d91cd9",
     "GUID:b24824f3bc2a60641a01e2083614f802",
-    "GUID:8af21c3a612af2645a9953d4b9b3f6d5"
+    "GUID:8af21c3a612af2645a9953d4b9b3f6d5",
+        "GUID:3c7b57a14671040bd8c549056adc04f5"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
