--- a/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/Extensions/SDK6DataMappingExtensions.asmdef
+++ b/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/Extensions/SDK6DataMappingExtensions.asmdef
@@ -2,7 +2,8 @@
     "name": "SDK6DataMappingExtensions",
     "rootNamespace": "",
     "references": [
-        "GUID:3c7b57a14671040bd8c549056adc04f5"
+        "GUID:3c7b57a14671040bd8c549056adc04f5",
+        "GUID:6e9be8e4a71701b48b60c8881e27a0e3"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
