--- a/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/CameraModeArea/DCL.Components.CameraModeArea.asmdef
+++ b/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/CameraModeArea/DCL.Components.CameraModeArea.asmdef
@@ -19,7 +19,8 @@
         "GUID:3b80b0b562b1cbc489513f09fc1b8f69",
         "GUID:c34e38f41494f834abff029ddf82af43",
         "GUID:3c7b57a14671040bd8c549056adc04f5",
-        "GUID:af7c0aba882f460ea6413f87a04b1ae5"
+        "GUID:af7c0aba882f460ea6413f87a04b1ae5",
+        "GUID:1098e333d7d35664a9748d2898e79013"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
