--- a/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/DCL.Components.asmdef
+++ b/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/DCL.Components.asmdef
@@ -1,13 +1,10 @@
 {
-    "name": "AvatarModel",
+    "name": "DCL.Components",
     "rootNamespace": "",
     "references": [
-        "GUID:7ac9f9c835ec1084ab35e3f9b176cf1e",
-        "GUID:4720e174f2805c74bb7aa94cc8bb5bf8",
-        "GUID:a78c5d8dad39efe45ab1b21901f8db0f",
-        "GUID:b1087c5731ff68448a0a9c625bb7e52d",
         "GUID:3c7b57a14671040bd8c549056adc04f5",
-        "GUID:1098e333d7d35664a9748d2898e79013"
+        "GUID:6e9be8e4a71701b48b60c8881e27a0e3",
+        "GUID:6e9be8e4a71701b48b60c8881e27a0e3"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
