--- a/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/LoadableShapes/DCL.Components.LoadableShapes.asmdef
+++ b/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/LoadableShapes/DCL.Components.LoadableShapes.asmdef
@@ -31,7 +31,8 @@
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:2995626b54c60644988f134a69a77450",
         "GUID:3c7b57a14671040bd8c549056adc04f5",
-        "GUID:af7c0aba882f460ea6413f87a04b1ae5"
+        "GUID:af7c0aba882f460ea6413f87a04b1ae5",
+        "GUID:1098e333d7d35664a9748d2898e79013"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
