fixed UI re-mapping

--- a/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/UI/UIInputText/Tests/UIInputTextTests.asmdef
+++ b/unity-renderer/Assets/Scripts/MainScripts/DCL/Components/UI/UIInputText/Tests/UIInputTextTests.asmdef
@@ -19,7 +19,8 @@
       "GUID:bd51ff2b035ce4ab4be7c38c43c88889",
       "GUID:6e9be8e4a71701b48b60c8881e27a0e3",
       "GUID:9a16a75a9de4ba2458b50ed374f1b28f",
-      "GUID:e8e8b57e56da94749a3e4bbb6c38524c"
+      "GUID:e8e8b57e56da94749a3e4bbb6c38524c",
+      "GUID:0b167d3fa6c88454ea3eb69cbabe4eb7"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
