--- a/unity-renderer/Assets/Scripts/MainScripts/DCL/WorldRuntime/DCL.Runtime.asmdef
+++ b/unity-renderer/Assets/Scripts/MainScripts/DCL/WorldRuntime/DCL.Runtime.asmdef
@@ -52,7 +52,8 @@
         "GUID:3c7b57a14671040bd8c549056adc04f5",
         "GUID:2995626b54c60644988f134a69a77450",
         "GUID:555c1f3c6d18648df910b7a1de75b424",
-        "GUID:6c1761dc8f737004198eb333521bd665"
+        "GUID:6c1761dc8f737004198eb333521bd665",
+        "GUID:26861d1714ac819459758e0b653efd06"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
